[gd_scene load_steps=8 format=3 uid="uid://b3cgu1f1vhbk6"]

[ext_resource type="Script" uid="uid://c071yk4q16dv5" path="res://scripts/configurações.gd" id="1_pso3b"]
[ext_resource type="FontFile" uid="uid://b5dwns2e2wujf" path="res://fonts/Minecraft.ttf" id="2_txe3p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_txe3p"]

[sub_resource type="Animation" id="Animation_pso3b"]
resource_name = "exit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1152)]
}

[sub_resource type="Animation" id="Animation_txe3p"]
resource_name = "intro"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -1152), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_2l0hb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1152)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n6loy"]
_data = {
&"RESET": SubResource("Animation_2l0hb"),
&"exit": SubResource("Animation_pso3b"),
&"intro": SubResource("Animation_txe3p")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pso3b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.768627)

[node name="sound" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -11.5
offset_right = 29.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_txe3p")
text = "NO SOUND"

[node name="sound" type="CheckButton" parent="ColorRect/sound"]
layout_mode = 0
offset_left = 83.0
offset_top = -7.5
offset_right = 127.0
offset_bottom = 16.5
theme_override_styles/focus = SubResource("StyleBoxEmpty_txe3p")
flat = true

[node name="exit" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = 5.0
offset_right = 93.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_txe3p")
theme_override_styles/focus = SubResource("StyleBoxEmpty_txe3p")
text = "Press [ESC] to exit
"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n6loy")
}
autoplay = "intro"

[connection signal="toggled" from="ColorRect/sound/sound" to="." method="_on_sound_toggled"]
[connection signal="pressed" from="ColorRect/exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
